--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Aggraj!</h1>
-				<p>I’m currently a PhD scholar at the NEMO Lab in Department of Electrical Engineering, <a href= "https://www.iitm.ac.in/">IIT Madras</a>, working under Prof Uday Khankhoje. Before joining IIT Madras, I have completed my Master's from IIT(ISM) Dhanbad. My research intrests include <em>Computational Electromagnetics</em> and <em>Deep Learning involving design of antennas and Microwave circuits</em>. <a href="/about">Read more about my life...</a></p>
+				<p>I’m currently a PhD scholar at the NEMO Lab in Department of Electrical Engineering, <a href= "https://www.iitm.ac.in/">IIT Madras</a>, working under <a href= "http://www.ee.iitm.ac.in/uday/">Prof Uday Khankhoje</a> . Before joining IIT Madras, I have completed my Master's from IIT(ISM) Dhanbad. My research intrests include <em>Computational Electromagnetics</em> and <em>Deep Learning involving design of antennas and Microwave circuits</em>. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
