--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:gupta.aggraj@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="https://scholar.google.com/citations?user=GcNWccwAAAAJ&hl=en">My Google Scholar</a></li>
 			</ul>
 		</footer>
 	</body>
